# advanced-ta

./: .gitignore  README.md  bitbucket-pipelines.yml  pyproject.toml
advanced_ta/LorentzianClassification/: Classifier.py  KernelFunctions.py  MLExtensions.py  Types.py
tests/: test_lorentzian_classification.py
tests/expected/: lc_case1.csv  lc_case3.csv
