[tool.poetry]
name = "advanced-ta"
version = "0.1.0"
description = "Python implementation of Lorentzian Classification algorithm."
authors = ["Loki Arya <loki.arya+osdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
TA-Lib = "^0.4.27"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
mplfinance = "^0.12.9-beta.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
